Avance en traducción (~48%)

--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 19:34+0200\n"
+"PO-Revision-Date: 2021-11-17 10:19-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/compound_stmts.rst:5
 msgid "Compound statements"
@@ -391,7 +392,6 @@ msgstr ""
 "esa pila hasta que ocurra la próxima recolección de basura."
 
 #: ../Doc/reference/compound_stmts.rst:302
-#, fuzzy
 msgid ""
 "Before an except clause's suite is executed, details about the exception are "
 "stored in the :mod:`sys` module and can be accessed via :func:`sys."
@@ -408,7 +408,7 @@ msgstr ""
 "rastreo (ver sección :ref:`types`) que identifica el punto en el programa "
 "donde ocurrió la excepción. Lo valores :func:`sys.exc_info` se restauran a "
 "sus valores anteriores (antes de la llamada) al regresar de una función que "
-"manejó una excepción."
+"manejó una excepción::"
 
 #: ../Doc/reference/compound_stmts.rst:334
 msgid ""
@@ -632,6 +632,8 @@ msgid ""
 "You can also write multi-item context managers in multiple lines if the "
 "items are surrounded by parentheses. For example::"
 msgstr ""
+"También puedes escribir administradores de contexto de múltiples ítems en "
+"múltiples lineas si los ítems están entre paréntesis. Por ejemplo::"
 
 #: ../Doc/reference/compound_stmts.rst:502
 msgid "Support for multiple context expressions."
@@ -642,6 +644,8 @@ msgid ""
 "Support for using grouping parentheses to break the statement in multiple "
 "lines."
 msgstr ""
+"Soporte para el uso de paréntesis de agrupación para separar la declaración "
+"en múltiples líneas."
 
 #: ../Doc/reference/compound_stmts.rst:511
 msgid ":pep:`343` - The \"with\" statement"
@@ -656,59 +660,75 @@ msgstr ""
 "keyword:`with`."
 
 #: ../Doc/reference/compound_stmts.rst:517
-#, fuzzy
 msgid "The :keyword:`!match` statement"
-msgstr "La sentencia :keyword:`!with`"
+msgstr "La sentencia :keyword:`!match`"
 
 #: ../Doc/reference/compound_stmts.rst:530
 msgid "The match statement is used for pattern matching.  Syntax:"
 msgstr ""
+"La declaración match es usada para coincidencia de patrones.  Sintaxis:"
 
 #: ../Doc/reference/compound_stmts.rst:539
 msgid ""
 "This section uses single quotes to denote :ref:`soft keywords <soft-"
 "keywords>`."
 msgstr ""
+"Esta sección utiliza comillas simples para denotar las :ref:`palabras clave "
+"<soft-keywords>` suaves."
 
+# Se utilizó valor de búsqueda para traducir *subject value* basándose en la traducción francesa *champ de recherche*.
 #: ../Doc/reference/compound_stmts.rst:542
+#, fuzzy
 msgid ""
 "Pattern matching takes a pattern as input (following ``case``) and a subject "
 "value (following ``match``).  The pattern (which may contain subpatterns) is "
 "matched against the subject value.  The outcomes are:"
 msgstr ""
+"La coincidencia de patrones toma un patrón como entrada (delante de "
+"``case``) y un valor de búsqueda (delante de ``match``).  El patrón (que "
+"puede contener subpatrones) es comparado con el valor de búsqueda.  Los "
+"resultados son:"
 
 #: ../Doc/reference/compound_stmts.rst:546
 msgid "A match success or failure (also termed a pattern success or failure)."
 msgstr ""
+"Una coincidencia exitosa o fallida (también llamada éxito o fracaso de un "
+"patrón)."
 
 #: ../Doc/reference/compound_stmts.rst:548
 msgid ""
 "Possible binding of matched values to a name.  The prerequisites for this "
 "are further discussed below."
 msgstr ""
+"Una posible vinculación de los valores coincidentes con un nombre.  Los "
+"requisitos previos para esto se discuten abajo."
 
 #: ../Doc/reference/compound_stmts.rst:551
 msgid ""
 "The ``match`` and ``case`` keywords are :ref:`soft keywords <soft-keywords>`."
 msgstr ""
+"Las palabras clave ``match`` y ``case`` son :ref:`palabras clave <soft-"
+"keywords>` suaves."
 
 #: ../Doc/reference/compound_stmts.rst:555
 #: ../Doc/reference/compound_stmts.rst:1109
 msgid ":pep:`634` -- Structural Pattern Matching: Specification"
-msgstr ""
+msgstr ":pep:`634` -- Coincidencia de patrones estructurales: Especificación"
 
 #: ../Doc/reference/compound_stmts.rst:556
 #: ../Doc/reference/compound_stmts.rst:1110
 msgid ":pep:`636` -- Structural Pattern Matching: Tutorial"
-msgstr ""
+msgstr ":pep:`636` -- Coincidencia de patrones estructurales: Tutorial"
 
 #: ../Doc/reference/compound_stmts.rst:560
 msgid "Overview"
-msgstr ""
+msgstr "Resumen"
 
 #: ../Doc/reference/compound_stmts.rst:562
 msgid "Here's an overview of the logical flow of a match statement:"
 msgstr ""
+"A continuación, un resumen del flujo lógico de una declaración de "
+"coincidencia:"
 
 #: ../Doc/reference/compound_stmts.rst:565
 msgid ""
@@ -716,6 +736,9 @@ msgid ""
 "value obtained. If the subject expression contains a comma, a tuple is "
 "constructed using :ref:`the standard rules <typesseq-tuple>`."
 msgstr ""
+"Se evalúa la expresión ``subject_expr`` y se obtiene un valor sujeto "
+"resultante. Si la expresión contiene una coma, se construye una tupla "
+"utilizando :ref:`las reglas estándar <typesseq-tuple>`."
 
 #: ../Doc/reference/compound_stmts.rst:569
 msgid ""
@@ -726,6 +749,14 @@ msgid ""
 "specified below.  **Name bindings made during a successful pattern match "
 "outlive the executed block and can be used after the match statement**."
 msgstr ""
+"Se intenta coincidir cada patrón en un ``case_block`` con el valor sujeto. "
+"Las reglas específicas para el éxito o el fracaso se describen abajo. El "
+"intento de coincidencia también puede enlazar algunos o todos los nombres "
+"independientes dentro del patrón. Las reglas precisas de enlace de patrones "
+"varían según el tipo de patrón y se especifican a continuación.  **Los "
+"enlaces de nombre realizados durante una coincidencia de patrones exitosa "
+"sobreviven al bloque ejecutado y se pueden usar después de la declaración de "
+"coincidencia**."
 
 #: ../Doc/reference/compound_stmts.rst:578
 msgid ""
