--- a/faq/windows.po
+++ b/faq/windows.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 11:03+0200\n"
+"PO-Revision-Date: 2021-11-21 15:09-0600\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 2.3\n"
 
 #: ../Doc/faq/windows.rst:9
 msgid "Python on Windows FAQ"
@@ -234,6 +235,8 @@ msgid ""
 "See :ref:`faq-create-standalone-binary` for a list of tools that can be used "
 "to make executables."
 msgstr ""
+"Vea :ref:`faq-create-standalone-binary` para una lista de herramientas que "
+"pueden ser usadas para crear ejecutables."
 
 #: ../Doc/faq/windows.rst:148
 msgid "Is a ``*.pyd`` file the same as a DLL?"
