--- a/using/windows.po
+++ b/using/windows.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 19:59+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-11-25 19:22-0600\n"
+"Last-Translator: Erick G. Islas Osuna <erickisos653@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/using/windows.rst:7
 msgid "Using Python on Windows"
@@ -1426,7 +1427,6 @@ msgstr ""
 "Windows para Linux)."
 
 #: ../Doc/using/windows.rst:622
-#, fuzzy
 msgid ""
 "You can use the :ref:`Python UTF-8 Mode <utf8-mode>` to change the default "
 "text encoding to UTF-8. You can enable the :ref:`Python UTF-8 Mode <utf8-"
@@ -1434,17 +1434,21 @@ msgid ""
 "environment variable.  See :envvar:`PYTHONUTF8` for enabling UTF-8 mode, "
 "and :ref:`setting-envvars` for how to modify environment variables."
 msgstr ""
-"Se puede utilizar el modo UTF-8 para cambiar la codificación predeterminada "
-"a UTF-8. El modo UTF-8 se puede activar mediante la opción de línea de "
-"comandos ``-X utf-8``, o con la variable de entorno ``PYTHONUTF8=1``. "
-"Consulte :envvar:`PYTHONUTF8` para activar el modo UTF-8, y :ref:`setting-"
-"envvars` para saber cómo modificar las variables de entorno."
+"Se puede utilizar el :ref:`modo UTF-8 <utf8-mode>` para cambiar la "
+"codificación predeterminada a UTF-8. El :ref:`modo UTF-8 <utf8-mode>` se "
+"puede activar mediante la opción de línea de comandos ``-X utf-8``, o con la "
+"variable de entorno ``PYTHONUTF8=1``. Consulte :envvar:`PYTHONUTF8` para "
+"activar el modo UTF-8, y :ref:`setting-envvars` para saber cómo modificar "
+"las variables de entorno."
 
 #: ../Doc/using/windows.rst:628
 msgid ""
 "When the :ref:`Python UTF-8 Mode <utf8-mode>` is enabled, you can still use "
 "the system encoding (the ANSI Code Page) via the \"mbcs\" codec."
 msgstr ""
+"Cuando el :ref:`modo UTF-8 de Python <utf8-mode>` es activado, usted puede "
+"seguir usando la codificación del sistema (La página de código ANSI) a "
+"través del códec \"mbcs\"."
 
 #: ../Doc/using/windows.rst:631
 msgid ""
@@ -1476,12 +1480,12 @@ msgstr ""
 "detalles)."
 
 #: ../Doc/using/windows.rst:642
-#, fuzzy
 msgid ""
 "The :term:`filesystem encoding <filesystem encoding and error handler>` "
 "(see :pep:`529` for details)."
 msgstr ""
-"Codificación del sistema de archivos (ver :pep:`529` para más detalles)."
+"La :term:`codificación del sistema <filesystem encoding and error handler>` "
+"(vea :pep:`529` para más detalles)."
 
 #: ../Doc/using/windows.rst:649
 msgid "Python Launcher for Windows"
@@ -2425,7 +2429,6 @@ msgid "cx_Freeze"
 msgstr "cx_Freeze"
 
 #: ../Doc/using/windows.rst:1109
-#, fuzzy
 msgid ""
 "`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ is a :mod:"
 "`distutils` extension (see :ref:`extending-distutils`) which wraps Python "
@@ -2433,11 +2436,11 @@ msgid ""
 "have done this, you can distribute your application without requiring your "
 "users to install Python."
 msgstr ""
-"`cx_Freeze <https://anthony-tuininga.github.io/cx_Freeze/>`_ es una "
-"extensión de :mod:`distutils` (ver :ref:`extending-distutils`) que encapsula "
-"scripts de Python en programas de Windows ejecutables (:file:`{*}.exe` "
-"files). Al hacer esto, se puede distribuir una aplicación sin que los "
-"usuarios instalen Python."
+"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ es una extensión "
+"de :mod:`distutils` (ver :ref:`extending-distutils`) que empaqueta scripts "
+"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe` ). "
+"Al hacer esto, se puede distribuir una aplicación sin que los usuarios "
+"necesiten instalar Python."
 
 #: ../Doc/using/windows.rst:1117
 msgid "WConio"
