--- a/distutils/examples.po
+++ b/distutils/examples.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-07-14 12:24-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-11-26 14:35+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/examples.rst:5
 msgid "Distutils Examples"
@@ -31,6 +32,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/distutils/examples.rst:9
 msgid ""
