--- a/distutils/index.po
+++ b/distutils/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-11-21 17:08-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-11-26 14:43+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/index.rst:5
 msgid "Distributing Python Modules (Legacy version)"
@@ -56,6 +57,10 @@ msgid ""
 "removed with the package. See the :ref:`What's New <distutils-deprecated>` "
 "entry for more information."
 msgstr ""
+"Todo el paquete ``distutils`` ha quedado obsoleto y se eliminará en Python "
+"3.12. Esta documentación se conserva solo como referencia y se eliminará con "
+"el paquete. Consulte la entrada :ref:`What's New <distutils-deprecated>` "
+"para obtener más información."
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
@@ -63,6 +68,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/distutils/index.rst:26
 msgid ""
