--- a/distutils/builtdist.po
+++ b/distutils/builtdist.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 10:55+0200\n"
+"PO-Revision-Date: 2021-11-26 14:47+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_ES\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/builtdist.rst:5
 msgid "Creating Built Distributions"
@@ -31,6 +32,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/distutils/builtdist.rst:9
 msgid ""
@@ -747,7 +752,7 @@ msgstr ""
 
 #: ../Doc/distutils/builtdist.rst:309
 msgid "to build a 64bit version of your extension."
-msgstr ""
+msgstr "para crear una versión de 64 bits de su extensión."
 
 #: ../Doc/distutils/builtdist.rst:311
 msgid ""
