Traducida entrada tutorial/modules
Closes #1406

--- a/tutorial/modules.po
+++ b/tutorial/modules.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-05 14:24-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-11-26 15:04+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/modules.rst:5
 msgid "Modules"
@@ -313,6 +314,8 @@ msgid ""
 "The installation-dependent default (by convention including a ``site-"
 "packages`` directory, handled by the :mod:`site` module)."
 msgstr ""
+"El valor predeterminado dependiente de la instalación (por convención que "
+"incluye un directorio ``site-packages``, manejado por el módulo :mod:`site`)."
 
 #: ../Doc/tutorial/modules.rst:198
 msgid ""
