Traducida entradas howto/logging-cookbook
Closes #1411

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-04 20:41+0200\n"
+"PO-Revision-Date: 2021-11-26 15:32+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/logging-cookbook.rst:5
 msgid "Logging Cookbook"
@@ -224,13 +225,12 @@ msgid "Dealing with handlers that block"
 msgstr "Tratar con gestores que bloquean"
 
 #: ../Doc/howto/logging-cookbook.rst:334
-#, fuzzy
 msgid ""
 "Sometimes you have to get your logging handlers to do their work without "
 "blocking the thread you're logging from. This is common in web applications, "
 "though of course it also occurs in other scenarios."
 msgstr ""
-"A veces tiene que hacer que sus gestores de logging hagan su trabajo sin "
+"A veces tiene que hacer que sus manejadores de registro hagan su trabajo sin "
 "bloquear el hilo desde el que está iniciando sesión. Esto es común en las "
 "aplicaciones web, aunque, por supuesto, también ocurre en otros escenarios."
 
@@ -1266,8 +1266,6 @@ msgstr ""
 msgid "Inserting a BOM into messages sent to a SysLogHandler"
 msgstr "Insertar BOM en mensajes enviados a SysLogHandler"
 
-# se hizo un cambio para que no ocurriera el error de :rfc:`...` que no
-# comienza por número.
 #: ../Doc/howto/logging-cookbook.rst:1689
 msgid ""
 ":rfc:`5424` requires that a Unicode message be sent to a syslog daemon as a "
@@ -2262,7 +2260,7 @@ msgstr ""
 
 #: ../Doc/howto/logging-cookbook.rst:2987
 msgid "Patterns to avoid"
-msgstr ""
+msgstr "Patrones para evitar"
 
 #: ../Doc/howto/logging-cookbook.rst:2989
 msgid ""
@@ -2271,10 +2269,15 @@ msgid ""
 "which are *unhelpful*, and which should therefore be avoided in most cases. "
 "The following sections are in no particular order."
 msgstr ""
+"Aunque las secciones anteriores han descrito formas de hacer las cosas que "
+"podría necesitar hacer o con las que tratar, vale la pena mencionar algunos "
+"patrones de uso que son *inútiles* y que, por lo tanto, deben evitarse en la "
+"mayoría de los casos. Las siguientes secciones no están en ningún orden en "
+"particular."
 
 #: ../Doc/howto/logging-cookbook.rst:2996
 msgid "Opening the same log file multiple times"
-msgstr ""
+msgstr "Abrir el mismo archivo de registro varias veces"
 
 #: ../Doc/howto/logging-cookbook.rst:2998
 msgid ""
@@ -2283,18 +2286,27 @@ msgid ""
 "However, on POSIX platforms you'll not get any errors if you open the same "
 "file multiple times. This could be done accidentally, for example by:"
 msgstr ""
+"En Windows, por lo general, no podrá abrir el mismo archivo varias veces, ya "
+"que esto generará un error de \"otro proceso está usando el archivo\". Sin "
+"embargo, en las plataformas POSIX no obtendrá ningún error si abre el mismo "
+"archivo varias veces. Esto podría hacerse accidentalmente, por ejemplo:"
 
 #: ../Doc/howto/logging-cookbook.rst:3003
 msgid ""
 "Adding a file handler more than once which references the same file (e.g. by "
 "a copy/paste/forget-to-change error)."
 msgstr ""
+"Agregar un controlador de archivos más de una vez que hace referencia al "
+"mismo archivo (por ejemplo, mediante un error de copiar/pegar/olvidar-"
+"cambiar)."
 
 #: ../Doc/howto/logging-cookbook.rst:3006
 msgid ""
 "Opening two files that look different, as they have different names, but are "
 "the same because one is a symbolic link to the other."
 msgstr ""
+"Abrir dos archivos que se ven diferentes, ya que tienen diferentes nombres, "
+"pero son iguales porque uno es un enlace simbólico al otro."
 
 #: ../Doc/howto/logging-cookbook.rst:3009
 msgid ""
@@ -2302,12 +2314,17 @@ msgid ""
 "the same file. This might be through use of the :mod:`multiprocessing` "
 "module, for example."
 msgstr ""
+"Bifurcar un proceso, después del cual tanto el padre como el hijo tienen una "
+"referencia al mismo archivo. Esto podría ser mediante el uso del módulo :mod:"
+"`multiprocessing`, por ejemplo."
 
 #: ../Doc/howto/logging-cookbook.rst:3013
 msgid ""
 "Opening a file multiple times might *appear* to work most of the time, but "
 "can lead to a number of problems in practice:"
 msgstr ""
+"Abrir un archivo varias veces puede *parecer* que funciona la mayor parte "
+"del tiempo, pero puede dar lugar a una serie de problemas en la práctica:"
 
 #: ../Doc/howto/logging-cookbook.rst:3016
 msgid ""
@@ -2317,6 +2334,12 @@ msgid ""
 "if concurrent writes are attempted by two different threads using two "
 "different handler instances which happen to point to the same file."
 msgstr ""
+"La salida del registro se puede distorsionar porque varios subprocesos o "
+"procesos intentan escribir en el mismo archivo. Aunque el registro protege "
+"contra el uso simultáneo de la misma instancia de controlador por varios "
+"subprocesos, no existe tal protección si dos subprocesos diferentes intentan "
+"escrituras simultáneas utilizando dos instancias de controlador diferentes "
+"que apunten al mismo archivo."
 
 #: ../Doc/howto/logging-cookbook.rst:3022
 msgid ""
@@ -2325,16 +2348,24 @@ msgid ""
 "confusion and wasted debugging time - log entries end up in unexpected "
 "places, or are lost altogether."
 msgstr ""
+"Un intento de eliminar un archivo (por ejemplo, durante la rotación de "
+"archivos) falla silenciosamente, porque hay otra referencia que apunta a él. "
+"Esto puede generar confusión y una pérdida de tiempo de depuración: las "
+"entradas del registro terminan en lugares inesperados o se pierden por "
+"completo."
 
 #: ../Doc/howto/logging-cookbook.rst:3027
 msgid ""
 "Use the techniques outlined in :ref:`multiple-processes` to circumvent such "
 "issues."
 msgstr ""
+"Utilice las técnicas descritas en :ref:`multiple-processes` para evitar "
+"estos problemas."
 
 #: ../Doc/howto/logging-cookbook.rst:3031
 msgid "Using loggers as attributes in a class or passing them as parameters"
 msgstr ""
+"Usar registradores como atributos en una clase o pasarlos como parámetros"
 
 #: ../Doc/howto/logging-cookbook.rst:3033
 msgid ""
@@ -2346,11 +2377,21 @@ msgid ""
 "attributes. However, this pattern doesn't make sense in Python, where the "
 "module (and not the class) is the unit of software decomposition."
 msgstr ""
+"Si bien puede haber casos inusuales en los que deba hacer esto, en general "
+"no tiene sentido porque los registradores son singletons. El código siempre "
+"puede acceder a una instancia de registrador dada por su nombre usando "
+"``logging.getLogger(name)``, por lo que pasar instancias y mantenerlas como "
+"atributos de instancia no tiene sentido. Tenga en cuenta que en otros "
+"lenguajes como Java y C#, los registradores suelen ser atributos de clase "
+"estáticos. Sin embargo, este patrón no tiene sentido en Python, donde el "
+"módulo (y no la clase) es la unidad de descomposición del software."
 
 #: ../Doc/howto/logging-cookbook.rst:3043
 msgid ""
 "Adding handlers other than :class:`NullHandler` to a logger in a library"
 msgstr ""
+"Agregar controladores distintos a :class:`NullHandler` a un registrador en "
+"una biblioteca"
 
 #: ../Doc/howto/logging-cookbook.rst:3045
 msgid ""
@@ -2359,10 +2400,15 @@ msgid ""
 "you are maintaining a library, ensure that you don't add handlers to any of "
 "your loggers other than a :class:`~logging.NullHandler` instance."
 msgstr ""
+"La configuración del registro agregando controladores, formateadores y "
+"filtros es responsabilidad del desarrollador de la aplicación, no del "
+"desarrollador de la biblioteca. Si mantiene una biblioteca, asegúrese de no "
+"agregar controladores a ninguno de sus registradores que no sean una "
+"instancia :class:`~logging.NullHandler`."
 
 #: ../Doc/howto/logging-cookbook.rst:3052
 msgid "Creating a lot of loggers"
-msgstr ""
+msgstr "Crando muchos registradores (*loggers*)"
 
 #: ../Doc/howto/logging-cookbook.rst:3054
 msgid ""
@@ -2374,3 +2420,11 @@ msgid ""
 "those describing areas within your application (generally modules, but "
 "occasionally slightly more fine-grained than that)."
 msgstr ""
+"Los registradores son singletons que nunca se liberan durante la ejecución "
+"de un script, por lo que la creación de muchos registradores consumirá "
+"memoria que luego no se puede liberar. En lugar de crear un registrador por "
+"ej. archivo procesado o conexión de red realizada, use los :ref:`mecanismos "
+"existentes <context-info>` para pasar información contextual a sus registros "
+"y restringir los registradores creados a aquellos que describen áreas dentro "
+"de su aplicación (generalmente módulos, pero ocasionalmente un poco más "
+"fino) granulado que eso)."
