--- a/howto/logging.po
+++ b/howto/logging.po
@@ -2001,7 +2001,7 @@ msgstr "Establece ``logging.logThreads`` en ``False``."
 
 #: ../Doc/howto/logging.rst:1091
 msgid "Current process ID (:func:`os.getpid`)"
-msgstr "ID de proceso actual (:func:`os.getpid`)"
+msgstr "ID del proceso actual (:func:`os.getpid`)"
 
 #: ../Doc/howto/logging.rst:1091
 msgid "Set ``logging.logProcesses`` to ``False``."
