add dictionary and typos

--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-12-02 10:30-0300\n"
+"PO-Revision-Date: 2021-12-02 18:12-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,7 +38,7 @@ msgid ""
 "distribution."
 msgstr ""
 "Consultar también :file:`Misc/SpecialBuilds.txt` en la distribución fuente "
-"de Python source distribution."
+"de Python."
 
 #: ../Doc/using/configure.rst:17
 msgid "General Options"
@@ -150,7 +150,8 @@ msgstr ""
 #: ../Doc/using/configure.rst:81
 msgid "Override order to check db backends for the :mod:`dbm` module"
 msgstr ""
-"Sobrescribe el orden para verificar los db backends para el módulo :mod:`dbm`"
+"Sobrescribe el orden para verificar los de las bases datos para el módulo :"
+"mod:`dbm`"
 
 #: ../Doc/using/configure.rst:83
 msgid ""
@@ -220,7 +221,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:121
 msgid "Install Options"
-msgstr "Opciones de intalación"
+msgstr "Opciones de instalación"
 
 #: ../Doc/using/configure.rst:125
 msgid ""
@@ -395,7 +396,7 @@ msgstr "Agrega ``d`` a :data:`sys.abiflags`."
 
 #: ../Doc/using/configure.rst:222
 msgid "Add :func:`sys.gettotalrefcount` function."
-msgstr "Agraga la función :func:`sys.gettotalrefcount`."
+msgstr "Agrega la función :func:`sys.gettotalrefcount`."
 
 #: ../Doc/using/configure.rst:223
 msgid "Add :option:`-X showrefcount <-X>` command line option."
