--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-12-02 18:12-0300\n"
+"PO-Revision-Date: 2021-12-02 18:19-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -870,7 +870,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:495
 msgid "Python Build System"
-msgstr "Sistema de compilación Pyhton"
+msgstr "Sistema de compilación Python"
 
 #: ../Doc/using/configure.rst:498
 msgid "Main files of the build system"
