fix documentation build

--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-12-02 18:19-0300\n"
+"PO-Revision-Date: 2021-12-02 18:27-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -215,9 +215,9 @@ msgid ""
 "_bundled` package."
 msgstr ""
 "Algunas políticas de empaquetado de distribución de Linux recomiendan no "
-"empaquetar dependencias. Por ejemplo, Fedora instala paquetes *Wheel* en el "
-"directorio ``/usr/share/python-wheels/`` y no instala el paquete :mod: "
-"`securepip._bundled`."
+"empaquetar dependencias. Por ejemplo, Fedora instala paquetes *wheel* en el "
+"directorio ``/usr/share/python-wheels/`` y no instala el paquete :mod:"
+"`ensurepip._bundled`."
 
 #: ../Doc/using/configure.rst:121
 msgid "Install Options"
