fix another documentation build

--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-12-02 18:27-0300\n"
+"PO-Revision-Date: 2021-12-02 18:43-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -821,7 +821,7 @@ msgid ""
 "only valid when :option:`--enable-universalsdk` is set."
 msgstr ""
 "Especifique el tipo de binario universal que se debe crear. Esta opción solo "
-"es válida cuando se establece :option:`--enable-universalalsdk`."
+"es válida cuando se establece :option:`--enable-universalsdk`."
 
 #: ../Doc/using/configure.rst:477
 msgid "Options:"
