Traduciendo entradas howto/logging (#1663)
* Traduciendo entradas howto/logging
* Update howto/logging.po

--- a/howto/logging.po
+++ b/howto/logging.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-12 20:29+0200\n"
+"PO-Revision-Date: 2021-11-26 15:09+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_US\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/logging.rst:3
 msgid "Logging HOWTO"
@@ -439,7 +440,6 @@ msgid "will display:"
 msgstr "se mostrará:"
 
 #: ../Doc/howto/logging.rst:256
-#, python-format
 msgid ""
 "As you can see, merging of variable data into the event description message "
 "uses the old, %-style of string formatting. This is for backwards "
@@ -449,11 +449,11 @@ msgid ""
 "tutorial: see :ref:`formatting-styles` for more information."
 msgstr ""
 "Como puede ver, la fusión de datos variables en el mensaje de descripción "
-"del evento utiliza el antiguo estilo % de formato de cadena. Esto es por "
-"compatibilidad con versiones anteriores: el paquete de registro es anterior "
-"a opciones de formato más nuevas, como :meth:`str.format` y :class:`string."
-"Template`. Estas nuevas opciones de formato *son* compatibles, pero "
-"explorarlas está fuera del alcance de este tutorial: consulte :ref:"
+"del evento utiliza el antiguo estilo % de formato de cadena de caracteres. "
+"Esto es por compatibilidad con versiones anteriores: el paquete de registro "
+"es anterior a opciones de formato más nuevas como :meth:`str.format` y :"
+"class:`string.Template`. Estas nuevas opciones de formato *son* compatibles, "
+"pero explorarlas está fuera del alcance de este tutorial: consulte :ref:"
 "`formatting-styles` para obtener más información."
 
 #: ../Doc/howto/logging.rst:265
@@ -1996,29 +1996,28 @@ msgid "Threading information."
 msgstr "Información sobre código con hilos."
 
 #: ../Doc/howto/logging.rst:1089
-#, fuzzy
 msgid "Set ``logging.logThreads`` to ``False``."
-msgstr "Ponga ``logging.logThreads`` en ``0``."
+msgstr "Establece ``logging.logThreads`` en ``False``."
 
 #: ../Doc/howto/logging.rst:1091
 msgid "Current process ID (:func:`os.getpid`)"
-msgstr ""
+msgstr "ID del proceso actual (:func:`os.getpid`)"
 
 #: ../Doc/howto/logging.rst:1091
-#, fuzzy
 msgid "Set ``logging.logProcesses`` to ``False``."
-msgstr "Ponga ``logging.logProcesses`` en ``0``."
+msgstr "Establece ``logging.logProcesses`` en ``False``."
 
 #: ../Doc/howto/logging.rst:1093
 msgid ""
 "Current process name when using ``multiprocessing`` to manage multiple "
 "processes."
 msgstr ""
+"Nombre del proceso actual cuando se usa ``multiprocessing`` para administrar "
+"múltiples procesos."
 
 #: ../Doc/howto/logging.rst:1093
-#, fuzzy
 msgid "Set ``logging.logMultiprocessing`` to ``False``."
-msgstr "Ponga ``logging.logProcesses`` en ``0``."
+msgstr "Establece ``logging.logMultiprocessing`` en ``False``."
 
 #: ../Doc/howto/logging.rst:1097
 msgid ""
