cambio frase de la revision

--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -2309,11 +2309,11 @@ msgid ""
 "example from a module method."
 msgstr ""
 "Argument Clinic facilita el acceso a la clase definitoria de un método. Esto "
-"es útil para :ref:`heap type <heap-types>` métodos que necesitan obtener el "
-"estado del nivel del módulo. Utilice :c:func:`PyType_FromModuleAndSpec` para "
-"asociar un nuevo tipo de pila con un módulo. Ahora puede usar :c:func:"
-"`PyType_GetModuleState` en la clase de definición para obtener el estado del "
-"módulo, por ejemplo, de un método de módulo."
+"es útil para método de tipo heap (:ref:`heap type <heap-types>`) que "
+"necesitan obtener el estado del nivel del módulo. Utilice :c:func:"
+"`PyType_FromModuleAndSpec` para asociar un nuevo tipo de pila con un módulo. "
+"Ahora puede usar :c:func:`PyType_GetModuleState` en la clase de definición "
+"para obtener el estado del módulo, por ejemplo, de un método de módulo."
 
 #: ../Doc/howto/clinic.rst:1218
 msgid ""
