aplicando sugerencia de la revisión

--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -198,11 +198,9 @@ msgid ""
 msgstr ""
 "Si ocurre una excepción que no coincide con la indicada en la *cláusula "
 "except* se pasa a los :keyword:`try` más externos; si no se encuentra un "
-"manejador, se genera una *unhandled exception* (excepción no gestionada) y "
-"la ejecución se interrumpe con un mensaje como el que se muestra arriba."
+"gestor, se genera una *unhandled exception* (excepción no gestionada) y la "
+"ejecución se interrumpe con un mensaje como el que se muestra arriba."
 
-# en desacuerdo con manejadores, serían, por ejemplo gestores. en mi opinión
-# se debería discutir y acordar.
 #: ../Doc/tutorial/errors.rst:114
 msgid ""
 "A :keyword:`try` statement may have more than one *except clause*, to "
@@ -213,11 +211,11 @@ msgid ""
 "for example::"
 msgstr ""
 "Una declaración :keyword:`try` puede tener más de una *cláusula except*, "
-"para especificar controladores para diferentes excepciones. Como máximo, se "
-"ejecutará un manejador. Los manejadores solo manejan las excepciones que "
-"ocurren en la *cláusula try* correspondiente, no en otros manejadores de la "
-"misma declaración :keyword:`!try`. Una *cláusula except* puede nombrar "
-"múltiples excepciones como una tupla entre paréntesis, por ejemplo:"
+"para especificar gestores para diferentes excepciones. Como máximo, se "
+"ejecutará un gestor. Los gestores solo manejan las excepciones que ocurren "
+"en la *cláusula try* correspondiente, no en otros gestores de la misma "
+"declaración :keyword:`!try`. Una *cláusula except* puede nombrar múltiples "
+"excepciones como una tupla entre paréntesis, por ejemplo:"
 
 #: ../Doc/tutorial/errors.rst:123
 msgid ""
@@ -254,7 +252,7 @@ msgstr ""
 "utilizar como comodín. ¡Use esto con extrema precaución, ya que es fácil "
 "enmascarar un error de programación real de esta manera! También se puede "
 "usar para imprimir un mensaje de error y luego volver a generar la excepción "
-"(permitiendo que una persona que llama también maneje la excepción):"
+"(permitiendo que la función que llama también maneje la excepción):"
 
 #: ../Doc/tutorial/errors.rst:169
 msgid ""
@@ -331,7 +329,7 @@ msgid ""
 "the *try clause*, but also if they occur inside functions that are called "
 "(even indirectly) in the *try clause*. For example::"
 msgstr ""
-"Los manejadores de excepciones no solo manejan las excepciones si ocurren "
+"Los gestores de excepciones no solo gestionan las excepciones si ocurren "
 "inmediatamente en la *cláusula try*, sino también si ocurren dentro de "
 "funciones que son llamadas (incluso indirectamente) en la *cláusula try*. "
 "Por ejemplo::"
